# python-pro-dz-2

./: .gitignore  app.py  pyproject.toml
blueprints/: mean_blueprint.py  requirements_blueprint.py  space_blueprint.py  users_blueprint.py
templates/: mean.html  requirements.html  space.html  users.html
templates/extends/: header.html
